[metadata]
name = sphinxcontrib-javadocs
summary = javadocs/groovydocs API docs for Sphinx, based on sphinxcontrib.javadocs
description-file =
    README.rst
author = Balder Bach
author-email = balder.bach@ufst.dk
home-page = http://www.sphinx-doc.org/
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities
license_files =
   LICENSE

[options]
install_requires =
   javalang>=0.10.1
   lxml
   beautifulsoup4
   docutils
   sphinx

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[flake8]
show-source = True
builtins = unicode
