[metadata]
name = sphinxcontrib-javadoc
summary = javadoc/groovydoc API docs for Sphinx, based on javasphinx
description-file =
    README.rst
author = Balder Bach
author-email = balder.bach@ufst.dk
home-page = http://www.sphinx-doc.org/
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities
license_files =
   LICENSE

[options]
install_requires =
   javalang>=0.10.1
   lxml
   beautifulsoup4
   docutils
   sphinx

[options.entry_points]
console_scripts =
    javasphinx-apidoc = sphinxcontrib.javadoc.apidoc:main

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[flake8]
max-line-length = 213
# black style
extend-ignore = E203

# This is a bit sad
max-complexity = 23
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,*/*migrations,testproject

show-source = True
# builtins = unicode
